Add spdx.org links.

--- a/libraries.html
+++ b/libraries.html
@@ -102,7 +102,7 @@
       <ul>
         <li><a href="https://github.com/revarbat/BOSL">Library</a></li>
         <li><a href="https://github.com/revarbat/BOSL/wiki">Documentation</a></li>
-        <li>License: BSD-2-Clause</li>
+        <li>License: <a href="https://spdx.org/licenses/BSD-2-Clause.html">BSD-2-Clause</a></li>
       </ul>
       <p style="clear: both"></p>
       <img class="libimg" src="images/dotscad.gif" width="200" align="right">
@@ -111,7 +111,7 @@
       <ul>
         <li><a href="https://github.com/JustinSDK/dotSCAD">Library</a></li>
         <li><a href="https://openhome.cc/eGossip/OpenSCAD/">Documentation</a></li>
-        <li>License: LGPL-3.0-only</li>
+        <li>License: <a href="https://spdx.org/licenses/LGPL-3.0-only.html">LGPL-3.0-only</a></li>
       </ul>
       <p style="clear: both"></p>
       <img class="libimg" src="https://raw.githubusercontent.com/nophead/NopSCADlib/master/libtest.png" width="200" align="right">
@@ -120,7 +120,7 @@
       <ul>
         <li><a href="https://github.com/nophead/NopSCADlib">Library</a></li>
         <li><a href="https://github.com/nophead/NopSCADlib/blob/master/readme.md">Documentation</a></li>
-        <li>License: GPL-3.0-or-later</li>
+        <li>License: <a href="https://spdx.org/licenses/GPL-3.0-or-later.html">GPL-3.0-or-later</a></li>
       </ul>
       <p style="clear: both"></p>
       <img class="libimg" src="images/ub.gif" width="200" align="right">
@@ -130,7 +130,7 @@
       <ul>
         <li><a href="https://github.com/UBaer21/UB.scad">Library</a></li>
         <li><a href="https://github.com/UBaer21/UB.scad/blob/main/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
       <img class="libimg" src="images/bolts.gif" width="200" align="right">
@@ -139,7 +139,7 @@
       <ul>
         <li><a href="https://github.com/boltsparts/BOLTS">Library</a></li>
         <li><a href="https://boltsparts.github.io/en/index.html">Documentation</a></li>
-        <li>License: LGPL-2.1-or-later | GPL-3.0-only</li>
+        <li>License: <a href="https://spdx.org/licenses/LGPL-2.1-or-later.html">LGPL-2.1-or-later</a> | <a href="https://spdx.org/licenses/GPL-3.0-only.html">GPL-3.0-only</a></li>
       </ul>
       <p style="clear: both"></p>
     </section>
@@ -154,7 +154,7 @@
         <li><a href="https://github.com/Irev-Dev/Round-Anything">Library</a></li>
         <li><a href="https://learn.cadhub.xyz/docs/round-anything/overview/">Overview</a><small> - <i>A pragmatic approach to OpenSCAD design</i></small></li>
         <li><a href="https://learn.cadhub.xyz/docs/round-anything/api-reference/">Documentation</a><small> - <i>API reference and examples</i></small></li>
-        <li>License: MIT</li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -166,7 +166,7 @@
       <ul>
         <li><a href="https://github.com/sbambach/MarksEnclosureHelper">Library</a></li>
         <li><a href="https://github.com/sbambach/MarksEnclosureHelper/blob/master/REFERENCE.md">Documentation</a></li>
-        <li>License: GPL-3.0-only</li>
+        <li>License: <a href="https://spdx.org/licenses/GPL-3.0-only.html">GPL-3.0-only</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -177,7 +177,7 @@
       <ul>
         <li><a href="https://github.com/thehans/funcutils">Library</a></li>
         <li><a href="https://github.com/thehans/funcutils/blob/master/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -193,7 +193,7 @@
       <ul>
         <li><a href="https://github.com/rcolyer/threads-scad">Library</a></li>
         <li><a href="https://github.com/rcolyer/threads-scad/blob/master/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -205,7 +205,7 @@
       <ul>
         <li><a href="https://github.com/rcolyer/smooth-prim">Library</a></li>
         <li><a href="https://github.com/rcolyer/smooth-prim/blob/master/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -221,7 +221,7 @@
       <ul>
         <li><a href="https://github.com/rcolyer/plot-function">Library</a></li>
         <li><a href="https://github.com/rcolyer/plot-function/blob/master/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
@@ -234,7 +234,7 @@
       <ul>
         <li><a href="https://github.com/rcolyer/closepoints">Library</a></li>
         <li><a href="https://github.com/rcolyer/closepoints/blob/master/README.md">Documentation</a></li>
-        <li>License: CC0-1.0</li>
+        <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
 
