--- a/libraries.html
+++ b/libraries.html
@@ -89,6 +89,7 @@
         <li>&centerdot;&nbsp;<a href="#FunctionPlotting">Function Plotting Library</a></li>
         <li>&centerdot;&nbsp;<a href="#ClosePoints">ClosePoints Library</a></li>
         <li>&centerdot;&nbsp;<a href="#Tray">Tray Library</a></li>
+        <li>&centerdot;&nbsp;<a href="#YAPP">YAPP Generator</a></li>
       </ul>
     </ul>
   </div>
@@ -247,6 +248,18 @@
         <li><a href="https://github.com/sofian/openscad-tray">Library</a></li>
         <li><a href="https://github.com/sofian/openscad-tray/blob/main/README.md">Documentation</a></li>
         <li>License: <a href="https://spdx.org/licenses/LGPL-3.0-or-later.html">LGPL-3.0-or-later</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/yapp.gif" width="200" align="right">
+      <h2 id="YAPP">Yet Another Parametric Projectbox generator</h2>
+      <p>A generator for electronic project boxes, based on a definition of a PCB and lots of
+        options for defining PCB standoffs and case cutouts.
+      </p>
+      <ul>
+        <li><a href="https://github.com/mrWheel/YAPP_Box">Library</a></li>
+        <li><a href="https://github.com/mrWheel/YAPP_Box/blob/main/README.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
     </section>
