--- a/libraries.html
+++ b/libraries.html
@@ -90,6 +90,7 @@
         <li>&centerdot;&nbsp;<a href="#ClosePoints">ClosePoints Library</a></li>
         <li>&centerdot;&nbsp;<a href="#Tray">Tray Library</a></li>
         <li>&centerdot;&nbsp;<a href="#YAPP">YAPP Generator</a></li>
+        <li>&centerdot;&nbsp;<a href="#STEMFIE">STEMFIE Parts Library</a></li>
       </ul>
     </ul>
   </div>
@@ -260,6 +261,22 @@
         <li><a href="https://github.com/mrWheel/YAPP_Box">Library</a></li>
         <li><a href="https://github.com/mrWheel/YAPP_Box/blob/main/README.md">Documentation</a></li>
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/stemfie.gif" width="200" align="right">
+      <h2 id="STEMFIE">STEMFIE Parts Library</h2>
+      <p>OpenSCAD library to create parts for the <a href="https://www.stemfie.org/">STEMFIE project</a>.</p>
+      <p><a href="https://www.stemfie.org/">STEMFIE</a> is a free educational construction-set
+        toy you can download and make at home using a 3D printer. Each component is a part of
+        a mechanical ecosystem of compatible shapes designed to interlock through various
+        connections and fasteners.
+      </p>
+      <ul>
+        <li><a href="https://www.stemfie.org/">STEMFIE project</a></li>
+        <li><a href="https://github.com/Cantareus/Stemfie_OpenSCAD">Library</a></li>
+        <li><a href="https://github.com/Cantareus/Stemfie_OpenSCAD/blob/main/docs/stemfie.scad.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/GPL-3.0-or-later.html">GPL-3.0-or-later</a></li>
       </ul>
       <p style="clear: both"></p>
     </section>
