Add BOSL2 (beta).

--- a/libraries.html
+++ b/libraries.html
@@ -74,6 +74,7 @@
       <li><a href="#general">General</a></li>
       <ul>
         <li>&centerdot;&nbsp;<a href="#BOSL">BOSL</a></li>
+        <li>&centerdot;&nbsp;<a href="#BOSL2">BOSL2</a></li>
         <li>&centerdot;&nbsp;<a href="#dotSCAD">dotSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#NopSCADlib">NopSCADlib</a></li>
         <li>&centerdot;&nbsp;<a href="#UB.scad">UB.scad</a></li>
@@ -107,6 +108,18 @@
         <li>License: <a href="https://spdx.org/licenses/BSD-2-Clause.html">BSD-2-Clause</a></li>
       </ul>
       <p style="clear: both"></p>
+
+      <img class="libimg" src="images/bosl2.gif" width="200" align="right">
+      <h2 id="BOSL2">BOSL2 (beta)</h2>
+      <p>Belfry OpenScad Library v2 - A library of tools, shapes, and helpers to make OpenScad easier to use.</p>
+      <ul>
+        <li><a href="https://github.com/revarbat/BOSL2">Library</a></li>
+        <li><a href="https://github.com/revarbat/BOSL2/wiki">Documentation</a></li>
+        <li><a href="https://github.com/revarbat/BOSL2/wiki/Tutorials">Tutorials</a></li>
+        <li>License: <a href="https://spdx.org/licenses/BSD-2-Clause.html">BSD-2-Clause</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
       <img class="libimg" src="images/dotscad.gif" width="200" align="right">
       <h2 id="dotSCAD">dotSCAD</h2>
       <p>Reduce the burden of 3D modeling in mathematics.</p>
@@ -116,6 +129,7 @@
         <li>License: <a href="https://spdx.org/licenses/LGPL-3.0-only.html">LGPL-3.0-only</a></li>
       </ul>
       <p style="clear: both"></p>
+
       <img class="libimg" src="https://raw.githubusercontent.com/nophead/NopSCADlib/master/libtest.png" width="200" align="right">
       <h2 id="NopSCADlib">NopSCADlib</h2>
       <p>An ever expanding library of parts modelled in OpenSCAD useful for 3D printers and enclosures for electronics, etc.</p>
@@ -125,6 +139,7 @@
         <li>License: <a href="https://spdx.org/licenses/GPL-3.0-or-later.html">GPL-3.0-or-later</a></li>
       </ul>
       <p style="clear: both"></p>
+
       <img class="libimg" src="images/ub.gif" width="200" align="right">
       <h2 id="UB.scad">UB.scad</h2>
       <p>This library is a full 3D printing workflow solution for OpenSCAD, bringing tools for modifying and
@@ -135,6 +150,7 @@
         <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
       </ul>
       <p style="clear: both"></p>
+
       <img class="libimg" src="images/bolts.gif" width="200" align="right">
       <h2 id="BOLTS">BOLTS</h2>
       <p>BOLTS is an Open Library of Technical Specifications.</p>
