Add Functional OpenSCAD Library.

--- a/libraries.html
+++ b/libraries.html
@@ -78,6 +78,7 @@
         <li>&centerdot;&nbsp;<a href="#dotSCAD">dotSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#NopSCADlib">NopSCADlib</a></li>
         <li>&centerdot;&nbsp;<a href="#UB.scad">UB.scad</a></li>
+        <li>&centerdot;&nbsp;<a href="#FunctionalOpenSCAD">Functional OpenSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#BOLTS">BOLTS</a></li>
       </ul>
       <li><a href="#singletopic">Single Topic</a></li>
@@ -148,6 +149,16 @@
         <li><a href="https://github.com/UBaer21/UB.scad">Library</a></li>
         <li><a href="https://github.com/UBaer21/UB.scad/blob/main/README.md">Documentation</a></li>
         <li>License: <a href="https://spdx.org/licenses/CC0-1.0.html">CC0-1.0</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/functional_openscad.gif" width="200" align="right">
+      <h2 id="FunctionalOpenSCAD">Functional OpenSCAD</h2>
+      <p>Implementing OpenSCAD in OpenSCAD.</p>
+      <ul>
+        <li><a href="https://github.com/thehans/FunctionalOpenSCAD">Library</a></li>
+        <li><a href="https://github.com/thehans/FunctionalOpenSCAD/blob/master/README.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
 
