Highlight documentation sub pages.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -6,8 +6,11 @@
 	<title>OpenSCAD - Documentation</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
-  
-  <link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/brands.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+
   <link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -96,6 +99,27 @@
   </div>
 
   <article>
+    <section-area>
+      <div class="link-grid">
+        <div class="link-button">
+          <a href="documentation.html"><i class="fas fa-scroll"></i></a>
+          <h1><a href="documentation.html">Documentation</i></a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-books.html"><i class="fas fa-book selected"></i></a>
+          <h1><a href="documentation-books.html">Books</a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-videos.html"><i class="fas fa-video"></i></a>
+          <h1><a href="documentation-videos.html">Videos</a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-articles.html"><i class="fas fa-globe"></i></a>
+          <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
+        </div>
+      </div>
+    </section-area>
+
     <section id="books-english">
       <h1>English</h1>
       <p style="clear: both"><br></p>
