--- a/documentation-videos.html
+++ b/documentation-videos.html
@@ -6,6 +6,8 @@
 	<title>OpenSCAD - Documentation</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 
@@ -95,6 +97,27 @@
   </div>
 
   <article>
+    <section-area>
+      <div class="link-grid">
+        <div class="link-button">
+          <a href="documentation.html"><i class="fas fa-scroll"></i></a>
+          <h1><a href="documentation.html">Documentation</i></a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-books.html"><i class="fas fa-book"></i></a>
+          <h1><a href="documentation-books.html">Books</a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-videos.html"><i class="fas fa-video selected"></i></a>
+          <h1><a href="documentation-videos.html">Videos</a></h1>
+        </div>
+        <div class="link-button">
+          <a href="documentation-articles.html"><i class="fas fa-globe"></i></a>
+          <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
+        </div>
+      </div>
+    </section-area>
+
     <section id="tutorials-video">
       <h1>Videos</h1>
 
