--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <meta name="p:domain_verify" content="e7ccfb283cc55dd8e8ce7a4641376553"/>
 	<link href="assets/css/style.css" rel="stylesheet"/>
 
-	<link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<script src="advent-calendar-2021/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -143,22 +145,22 @@
     <section-area>
       <div class="link-grid">
         <div class="link-button">
-          <h1><a href="https://web.libera.chat/?channel=#openscad">Chat</a></h1>
-          <small>Chat with developers and users on libera.chat</small>
-        </div>
-        <div class="link-button">
+          <a href="documentation.html#tutorial"><i class="fas fa-scroll"></i></a>
           <h1><a href="documentation.html#tutorial">Tutorial</a></h1>
           <small>Get started with OpenSCAD</small>
         </div>
         <div class="link-button">
+          <a href="libraries.html"><i class="fas fa-industry"></i></a>
           <h1><a href="libraries.html">Libraries</a></h1>
           <small>Ready-made building blocks</small>
         </div>
         <div class="link-button">
+          <a href="documentation-books.html"><i class="fas fa-book"></i></a>
           <h1><a href="documentation-books.html">Books</a></h1>
           <small>List of books on OpenSCAD</small>
         </div>
         <div class="link-button">
+          <a href="cheatsheet/index.html"><i class="far fa-map"></i></a>
           <h1><a href="cheatsheet/index.html" target="_blank">Cheat Sheet</a></h1>
           <small>Overview of modules and functions</small>
         </div>
