Update system requirements.

--- a/downloads.html
+++ b/downloads.html
@@ -442,15 +442,15 @@
 		<section id="snapshots">
 			<h1>Development Snapshots</h1>
 
-			<p>Development snapshots are built irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
-
 			<div id="snapshots-osx" class="subsection">
 				<h2>macOS</h2>
+
+				<p>System requirements: macOS 10.13 "High Sierra" or newer, universal build supporting Intel and M1 systems.</p>
 
 				<div class="left, download-button">
 					<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
 					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3></a>
-					<small>64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small><br>
+					<small>64 bit Universal - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small><br>
 					<small><a id="MAC_SNAPSHOT_SHA256_URL" href="">sha256</a></small> -
 					<small><a id="MAC_SNAPSHOT_SHA512_URL" href="">sha512</a></small>
 				</div>
@@ -458,6 +458,8 @@
 
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
+
+				<p>System requirements: Windows 10 or newer, Intel systems.</p>
 
 				<div class="left, download-button">
 					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
