--- a/about.html
+++ b/about.html
@@ -116,6 +116,7 @@
 				  <li><a href="https://libre3d.com">Libre 3D</a></li>
 				  <li><a href="https://www.blockscad3d.com/editor/">BlocksCAD</a></li>
 				  <li><a href="https://cadhub.xyz">CadHub</a></li>
+				  <li><a href="https://models.makewithtech.com/">Models @ MakeWithTech</a></li>
 				</ul>
 		</section>
 
