Add catchnhole library.

--- a/libraries.html
+++ b/libraries.html
@@ -306,6 +306,16 @@
         <li>License: <a href="https://spdx.org/licenses/GPL-3.0-or-later.html">GPL-3.0-or-later</a></li>
       </ul>
       <p style="clear: both"></p>
+
+      <img class="libimg" src="images/catchnhole.gif" width="200" align="right">
+      <h2 id="catchnhole">Catch'n'Hole</h2>
+      <p>An ergonomic way to create nutcatches, screw holes and countersinks in OpenSCAD.</p>
+      <ul>
+        <li><a href="https://github.com/mmalecki/catchnhole">Library</a></li>
+        <li><a href="https://github.com/mmalecki/catchnhole/blob/latest/README.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
+      </ul>
+      <p style="clear: both"></p>
     </section>
 
   </article>
