Add book Simplifying 3D Printing with OpenSCAD.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -154,6 +154,45 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/Simplifying3DPrintingWithOpenSCAD.jpg" align="right">
+        <h2>Simplifying 3D Printing with OpenSCAD</h2>
+        <p>
+          OpenSCAD is an open-source 3D design platform that helps you bring your designs
+          to life. This book will show you how to make the best use of OpenSCAD to design
+          and build objects using 3D printers.
+        </p>
+        <p>
+          This OpenSCAD book starts by taking you through the 3D printing technology, the
+          software used for designing your objects, and an analysis of the G-code produced
+          by the 3D printer slicer software. Complete with step-by-step explanations of
+          essential concepts and real-world examples such as designing and printing a 3D
+          name badge, model rocket, and laptop stand, the book helps you learn about 3D
+          printers and how to set up a printing job. You'll design your objects using the
+          OpenSCAD program that provides a robust and free 3D compiler at your fingertips.
+          As you set up a 3D printer for a print job, you'll gain a solid understanding of
+          how to configure the parameters to build well-defined designs.
+        </p>
+        <p>
+          By the end of this 3D printing book, you'll be ready to start designing and printing
+          your own 3D printed products using OpenSCAD.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Colin Dow</li>
+          <li>Publisher: Packt
+            &nbsp <a href="https://subscription.packtpub.com/product/business_and_other/9781801813174"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: March 2022</li>
+          <li>ISBN: 978-1-80-181317-4</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD">PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD</a></p>
+        <p>Addenum Video: <a href="https://www.youtube.com/watch?v=WUjyThFvBFk"><span class="fab fa-youtube"></span> How to make a Screwdriver Bracket using OpenSCAD</a></p>
+        <p>Buy/Access via Packt Subscription: <a href="https://subscription.packtpub.com/product/business_and_other/9781801813174">Book page at Packt</a></p>
+        <p>Order from <a href="https://www.amazon.com/dp/1801813175">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/MasteringOpenSCAD.png" align="right">
         <h2>Mastering OpenSCAD within 10 projects</h2>
         <p>
