Add book Make: Geometry.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -193,6 +193,37 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/Make-Geometry-Cover.png" align="right">
+        <h2>Make: Geometry</h2>
+        <p>
+          Geometry, of all the branches of mathematics, is the one that is most easily
+          visualized by making something. However, it is all too easy to reduce it to
+          reams of formulas to memorize and proofs to replicate. A lot of the basics of
+          geometry are a few thousand years old, and mostly solve practical problems.
+        </p>
+        <p>
+          In <b>Make: Geometry</b>, we use OpenSCAD 3D printable models and other hands-on techniques
+          to get at both the practicality of geometry, without losing the puzzle-solving and
+          the aesthetics that also make it joyful to learn.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Joan Horvath, Rich Cameron
+            &nbsp <a href="https://www.nonscriptum.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Publisher: Make Community, LLC
+            &nbsp <a href="https://make.co/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: August 2021</li>
+          <li>ISBN: 978-1-68-045671-4</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/whosawhatsis/Geometry/"><span class="fab fa-github"></span> whosawhatsis/Geometry</a></p>
+        <p>Buy from Make: <a href="https://www.makershed.com/products/make-geometry">Print</a> / <a href="https://www.makershed.com/products/make-geometry-pdf">PDF</a></p>
+        <p>Order from <a href="https://www.amazon.com/gp/product/1680456717">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/MasteringOpenSCAD.png" align="right">
         <h2>Mastering OpenSCAD within 10 projects</h2>
         <p>
