Add icon to github link.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -186,7 +186,7 @@
           <li>ISBN: 978-1-80-181317-4</li>
         </ul>
         </div>
-        <p>Github Repository: <a href="https://github.com/PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD">PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD</a></p>
+        <p>Github Repository: <a href="https://github.com/PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD"><span class="fab fa-github"></span> PacktPublishing/Simplifying-3D-Printing-with-OpenSCAD</a></p>
         <p>Addenum Video: <a href="https://www.youtube.com/watch?v=WUjyThFvBFk"><span class="fab fa-youtube"></span> How to make a Screwdriver Bracket using OpenSCAD</a></p>
         <p>Buy/Access via Packt Subscription: <a href="https://subscription.packtpub.com/product/business_and_other/9781801813174">Book page at Packt</a></p>
         <p>Order from <a href="https://www.amazon.com/dp/1801813175">Amazon</a></p>
