Add Volume 1 & 2 of 3D Printed Science Projects.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -393,6 +393,69 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/3dp-science-projects-2.png" align="right">
+        <h2>3D Printed Science Projects Volume 2 - <i>Physics, Math, Engineering and Geology Models</i></h2>
+        <p>
+          This book uses OpenSCAD models to visualize science principles in topics somewhat
+          more advanced than the ones in the first volume,  including models of geological
+          strata, snowflakes, probability, moment of inertia, the doppler shift, and more.
+          The models are designed in most cases to be altered by the reader to experiment
+          and improve their understanding of the science topics.
+        </p>
+        <p>
+          <i class="fas fa-info-circle"></i> The associated repository of models has moved
+          since the book was published, and can now be found at
+          <a href="https://github.com/Apress/3d-printed-science-projects-ii">https://github.com/Apress/3d-printed-science-projects-ii</a>.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Joan Horvath, Rich Cameron
+            &nbsp <a href="https://www.nonscriptum.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Publisher: Apress/Springer
+            &nbsp <a href="https://www.apress.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: May 2017</li>
+          <li>ISBN: 978-1-48-422694-0</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/Apress/3d-printed-science-projects-ii/"><span class="fab fa-github"></span> Apress/3d-printed-science-projects-ii</a></p>
+        <p>Publisher's page: <a href="https://link.springer.com/book/10.1007/978-1-4842-2695-7">Springer Link</a></p>
+        <p>Order from <a href="https://www.amazon.com/3D-Printed-Science-Projects-Engineering/dp/1484226941/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
+        <img class="libimg" width="200" src="images/3dp-science-projects-1.png" align="right">
+        <h2>3D Printed Science Projects - <i>Ideas for your Classroom, Science Fair or Home</i></h2>
+        <p>
+          This book uses OpenSCAD models to visualize science principles behind simple
+          machines, plant growth, orbits of planets, waves, molecules, trusses and more.
+          The models are designed in most cases to be altered by the reader to experiment
+          and improve their understanding of the science topics.
+        </p>
+        <p>
+          <i class="fas fa-info-circle"></i> The associated repository of models has moved since
+          the book was published, and can now be found at
+          <a href="https://github.com/whosawhatsis/3DP-Science-Projects/">https://github.com/whosawhatsis/3DP-Science-Projects/</a>.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Joan Horvath, Rich Cameron
+            &nbsp <a href="https://www.nonscriptum.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Publisher: Apress/Springer
+            &nbsp <a href="https://www.apress.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: May 2016</li>
+          <li>ISBN: 978-1-48-421324-7</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/whosawhatsis/3DP-Science-Projects/"><span class="fab fa-github"></span> whosawhatsis/3DP-Science-Projects</a></p>
+        <p>Publisher's page: <a href="https://link.springer.com/book/10.1007/978-1-4842-1323-0">Springer Link</a></p>
+        <p>Order from <a href="https://www.amazon.com/Printed-Science-Projects-classroom-Technology/dp/1484213246/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/OpenSCADFor3dPrinting.jpg" align="right">
         <h2>OpenSCAD for 3D Printing</h2>
         <div class="book-data">
