Add GSoC Article and news ticker.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -152,7 +152,7 @@
         <p>Read more at <a href="https://programmingwithopenscad.github.io/">programmingwithopenscad.github.io</a></p>
       </p>
       <p style="clear: both"><br></p>
-      <p>
+      <p id="simplifying-3d-printing">
         <img class="libimg" width="200" src="images/Simplifying3DPrintingWithOpenSCAD.jpg" align="right">
         <h2>Simplifying 3D Printing with OpenSCAD</h2>
         <p>
