--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
-	<script src="advent-calendar-2021/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
@@ -116,10 +115,15 @@
 	
   <article>
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
-      <p>
-	OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a>
-	(on IRC network <a href="https://libera.chat/">libera.chat</a>).
-      </p>
+      <div class="ticker-wrap">
+        <div class="ticker-move ticker-animation">
+          <div class="ticker-item">OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a href="https://libera.chat/">libera.chat</a>).</div>
+          <div class="ticker-item">Workshop: <a href="https://concordiauniversity.libcal.com/event/3667913">3D Modelling 102: OpenSCAD</a><br>Concordia University Library, June 7th</div>
+          <div class="ticker-item">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div>
+          <div class="ticker-item">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div>
+          <div class="ticker-item">OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a href="https://libera.chat/">libera.chat</a>).</div>
+        </div>
+      </div>
     </section-area>
 
     <section>
