Force abstract starting below the logo.

--- a/news.html
+++ b/news.html
@@ -90,6 +90,7 @@
           titled "3D Viewport Graphical Enhancements" is meant to modernize part of the display
           code and give some support for nicer model presentation.
         </p>
+        <br clear="all">
         <p><b>Abstract:</b></p>
         <p>
           The project would allow the 3D viewport to support custom shaders for the render mode (F6).
