--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
-          <div class="ticker-item">OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a href="https://libera.chat/">libera.chat</a>).</div>
-          <div class="ticker-item">Workshop: <a href="https://concordiauniversity.libcal.com/event/3667913">3D Modelling 102: OpenSCAD</a><br>Concordia University Library, June 7th</div>
-          <div class="ticker-item">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div>
-          <div class="ticker-item">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div>
-          <div class="ticker-item">OpenSCAD Chat: <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a href="https://libera.chat/">libera.chat</a>).</div>
+          <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
+          <div class="ticker-item"><div class="ticker-content">Workshop: <a target="_blank" href="https://concordiauniversity.libcal.com/event/3667913">3D Modelling 102: OpenSCAD</a><br>Concordia University Library, June 7th</div></div>
+          <div class="ticker-item"><div class="ticker-content">Release: <a target="_blank" href="https://pypi.org/project/sca2d/0.2.0/">SCA2D v0.2</a><br>Static Code Analysis for SCAD</div></div>
+          <div class="ticker-item"><div class="ticker-content">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
         </div>
       </div>
     </section-area>
