Add book Make: Calculus.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -152,6 +152,32 @@
         <p>Read more at <a href="https://programmingwithopenscad.github.io/">programmingwithopenscad.github.io</a></p>
       </p>
       <p style="clear: both"><br></p>
+      <p id="make-calculus">
+        <img class="libimg" width="200" src="images/Make-Calculus-Cover.jpg" align="right">
+        <h2>Make: Calculus</h2>
+        <p>
+          This book is not a traditional Calculus I textbook! Make: Calculus imagines how
+          Isaac Newton might have used 3D printed models, construction toys, programming,
+          craft materials, and an Arduino or two to teach calculus concepts in an intuitive
+          way.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Joan Horvath, Rich Cameron
+            &nbsp <a href="https://www.nonscriptum.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Publisher: Make Community, LLC
+            &nbsp <a href="https://make.co/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: September 2022</li>
+          <li>ISBN: 978-1-68-045739-1</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/whosawhatsis/Calculus/"><span class="fab fa-github"></span> whosawhatsis/Calculus</a></p>
+        <p>Buy from Make: <a href="https://www.makershed.com/products/make-calculus-print">Print</a></p>
+        <p>Order from <a href="https://www.amazon.com/Make-Calculus-prints-coding-electronics/dp/168045739X/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
       <p id="simplifying-3d-printing">
         <img class="libimg" width="200" src="images/Simplifying3DPrintingWithOpenSCAD.jpg" align="right">
         <h2>Simplifying 3D Printing with OpenSCAD</h2>
