--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <div class="ticker-move ticker-animation">
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
           <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
-          <div class="ticker-item"><div class="ticker-content">Release: <a target="_blank" href="https://pypi.org/project/sca2d/0.2.0/">SCA2D v0.2</a><br>Static Code Analysis for SCAD</div></div>
-          <div class="ticker-item"><div class="ticker-content">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">New Book (coming soon): <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
         </div>
       </div>
