--- a/documentation-books.html
+++ b/documentation-books.html
@@ -84,6 +84,7 @@
     <ul>
       <li><a href="documentation-books.html#books-english">English</a></li>
 			<li><a href="documentation-books.html#books-german">German / Deutsch</a></li>
+	    <li><a href="documentation-books.html#books-spanish">Spanish / Español</a></li>
     </ul>
     <h1><a href="documentation-videos.html">Videos</a></h1>
     <ul>
