Add ID for direct linking, shorten links.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -609,7 +609,7 @@
  <section id="books-spanish">
       <h1>Spanish / Español</h1>
       <p style="clear: both"><br></p>
-      <p>
+      <p id="un-reloj-de-sol-digital">
         <img class="libimg" width="200" src="images/UnRelojdeSolDigital.png" align="right">
         <h2>Un reloj de Sol digital</h2>
         <p>
@@ -647,12 +647,10 @@
 		  Creative Commons Atribución-CompartirIgual 4.0 Internacional</a>.</li>
         </ul>
         </div>
-        <p>Edición para imprimir: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-libro.pdf">https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-libro.pdf</a></p>
-	<p>Edición para pantallas: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-pantalla.pdf">https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-pantalla.pdf</a></p>
-        <p>Repositorio GitHub: <span class="fab fa-github"></span> <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/">https://github.com/lopezsolerluis/reloj-de-sol-libro/</a></p>
+        <p>Edición para imprimir: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-libro.pdf">reloj-de-sol-libro.pdf</a></p>
+        <p>Edición para pantallas: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-pantalla.pdf">reloj-de-sol-pantalla.pdf</a></p>
+        <p>Repositorio GitHub: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/"><span class="fab fa-github"></span> lopezsolerluis/reloj-de-sol-libro</a></p>
       </p>
-      <p style="clear: both"><br></p>
-
       <p style="clear: both"><br></p>
     </section>
 
